--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
              </a>
            </li>
            <li class="list-social-media">
-              <a>
+              <a href="" class="footer-media-item">
                 <svg class="social-list-icon" width="24" height="24">
                  <use href="/images/icons.svg#icon-twitter"></use>
                 </svg>
