--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
               <div class="portfolio-img-container">
                 <img class="project-link link" src="./images/row1/meditation-app.jpg" alt="Project 3" width="360" height="300">
                 <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · ExoticFruit Ecommerce App · Cloud Storage App
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce Ap · Cloud Storage App
                 </p>
               </div>
               <div class="service-container">
@@ -340,7 +340,7 @@
               <div class="portfolio-img-container">
                 <img class="project-link link" src="./images/row2/taxi-service.jpg" alt="Project 4" width="360" height="300">
                 <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·Exotic Fruit Ecommerce App · Cloud Storage App
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </p>
               </div>
               <div class="service-container">
@@ -353,7 +353,7 @@
               <div class="portfolio-img-container">
                 <img class="project-link link" src="./images/row2/screen-illustrations.jpg" alt="Project 5" width="360" height="300">
                 <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App·Exotic Fruit Ecommerce App · Cloud Storage App
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </p>
               </div>
               <div class="service-container">
@@ -366,7 +366,7 @@
               <div class="portfolio-img-container">
                 <img class="project-link link" src="./images/row2/online-courses.jpg" alt="Project 6" width="360" height="300">
                 <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App·Exotic Fruit Ecommerce App · Cloud Storage App
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </p>
               </div>
               <div class="service-container">
@@ -402,16 +402,10 @@
            <li class="list-social-media">
               <a href="" class="footer-media-item">
                 <svg class="social-list-icon" width="24" height="24">
-                 <use href="/images/icons.svg#icon-twitter"></use>
+                 <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
            </li>
-           <li class="list-social-media">
-             <a href="" class="footer-media-item">
-                <svg class="social-list-icon" width="24" height="24">
-                 <use href="/images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
             </li>
             <li class="list-social-media">
               <a href="" class="footer-media-item">
