--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
               <div class="portfolio-img-container">
                 <img class="project-link link" src="./images/row1/meditation-app.jpg" alt="Project 3" width="360" height="300">
                 <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce Ap · Cloud Storage App
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </p>
               </div>
               <div class="service-container">
