--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list list">
             <li class="list-service link">
-              <a href="" class="product-card">
+              <!--<a href="" class="product-card">-->
                 <div class="portfolio-img-container">
                   <img class="project-link link" src="./images/row1/banking-app-interface-concept.jpg" alt="Project 1" width="360" height="300">
                    <p class="overlay">
@@ -310,13 +310,13 @@
                  <h3 class="description-title">Banking App</h3>
                  <p class="portfolio-desk">App</p>
                </div>
-             </a>
+             <!--</a>-->
              
             </li>
 
              <li class="list-service link"> 
-                <a href="" class="product-card">
-                  <div class="portfolio-img-container">
+                <!--<a href="" class="product-card">-->
+                  <div class="overflow">
                     <img class="project-link link" src="./images/row1/cashless-payment.jpg" alt="Project 2" width="360" height="300">
                     <p class="overlay">
                       14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -326,12 +326,11 @@
                     <h3 class="description-title">Cashless Payment</h3>
                     <p class="portfolio-desk">Marketing</p>
                   </div>
-                </a>
+               <!--</a>-->
              </li>
 
             <li class="list-service link">
-              <a href="" class="product-card">
-                <div class="portfolio-img-container">
+                <div class="overflow">
                  <img class="project-link link" src="./images/row1/meditation-app.jpg" alt="Project 3" width="360" height="300">
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -341,12 +340,10 @@
                   <h3 class="description-title">Meditation App</h3>
                   <p class="portfolio-desk">App</p>
                 </div>
-              </a>
             </li>
 
             <li class="list-service link">
-              <a href="" class="product-card">
-                <div class="portfolio-img-container">
+                <div class="overflow">
                   <img class="project-link link" src="./images/row2/taxi-service.jpg" alt="Project 4" width="360" height="300">
                   <p class="overlay">
                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -356,12 +353,10 @@
                  <h3 class="description-title">Taxi Service</h3>
                  <p class="portfolio-desk">Marketing</p>
                </div>
-             </a>
             </li>
 
             <li class="list-service link">
-              <a href="" class="product-card">
-                <div class="portfolio-img-container">
+                <div class="overflow">
                   <img class="project-link link" src="./images/row2/screen-illustrations.jpg" alt="Project 5" width="360" height="300">
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -371,12 +366,10 @@
                  <h3 class="description-title">Screen Illustrations</h3>
                  <p class="portfolio-desk">Design</p>
                </div>
-             </a>
             </li>
 
             <li class="list-service link">
-              <a href="" class="product-card">
-                <div class="portfolio-img-container">
+                <div class="overflow">
                   <img class="project-link link" src="./images/row2/online-courses.jpg" alt="Project 6" width="360" height="300">
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -386,7 +379,6 @@
                  <h3 class="description-title">Online Courses</h3>
                  <p class="portfolio-desk">Marketing</p>
                 </div>
-             </a>
             </li>
           </ul>
         </div>
