--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
           <ul class="portfolio-list list">
             <li class="list-service link">
               <!--<a href="" class="product-card">-->
-                <div class="portfolio-img-container">
+                <div class="overflow">
                   <img class="project-link link" src="./images/row1/banking-app-interface-concept.jpg" alt="Project 1" width="360" height="300">
                    <p class="overlay">
                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -311,7 +311,6 @@
                  <p class="portfolio-desk">App</p>
                </div>
              <!--</a>-->
-             
             </li>
 
              <li class="list-service link"> 
