--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body class="body-container">
     <!--HEADER-->
     <header class="page-header">
-      <div class="container-header container">
+      <div class="container-header">
         <nav class="page-navigation list">
           <a href="./index.html" class="header-logo link"
             >Web<span class="header-logo-part-dark">Studio</span></a>
@@ -60,7 +60,7 @@
       </section>
 
       <!--FIRST SECTION-->
-      <section class="features">
+      <section class="features" >
         <div class="section-container container">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list list">
