--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
-    >
+      >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
@@ -20,7 +20,7 @@
 
   <body class="body-container">
     <!--HEADER-->
-    <header class="page-header">
+    <header class="page-header container">
       <div class="container-header">
         <nav class="page-navigation list">
           <a href="./index.html" class="header-logo link"
